--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,10 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-rx-java</artifactId>
+        </dependency>
         <!-- oauth2 -->
 
         <dependency>
